<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_notification_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="12dp">

    <ImageView
        android:id="@+id/iv_notification_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/icon_sun"
        app:tint="#000000"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_notification_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_test_city_name"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_notification_weather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_test_weather"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_notification_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_test_time"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
