<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/transparent">

        <ImageView
            android:id="@+id/item_index_image_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="12dp"
            android:tint="@android:color/white"
            tools:src="@drawable/index_air_conditioning"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center">

                <TextView
                    android:id="@+id/item_index_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginStart="2dp"
                    android:textColor="@android:color/white"
                    tools:text="@string/default_test_index_title"/>

                <TextView
                    android:id="@+id/item_index_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:textSize="10sp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:background="@drawable/frame_index_bj"
                    tools:text="@string/default_test_index_sub"/>

            </LinearLayout>

            <TextView
                android:id="@+id/item_index_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_view_padding"
                android:paddingBottom="6dp"
                android:lineSpacingExtra="2dp"
                android:textSize="12sp"
                android:textColor="@color/divider"
                tools:text="@string/default_test_index_msg"/>

        </LinearLayout>

    </LinearLayout>

