<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/frame_reveal_weather_msg"
    android:orientation="horizontal"
    android:padding="@dimen/weather_view_pager_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingStart="12dp">

            <ImageView
                android:id="@+id/weather_airquality_image_iv"
                android:layout_width="@dimen/default_weather_image_view_size"
                android:layout_height="@dimen/default_weather_image_view_size"
                android:layout_marginEnd="6dp"
                android:src="@drawable/icon_airquality"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/weather_airquality_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorWhite"
                tools:text="轻度污染" />

            <TextView
                android:id="@+id/aqi_quality_level_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/text_view_padding"
                android:textColor="@android:color/white"
                tools:text="@string/default_aqi_quality_level" />

        </LinearLayout>

        <com.tokyonth.weather.widget.SemicircleProgressView
            android:id="@+id/semicircle_progress_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:semicircleBackgroundLineColor="@android:color/white"
            app:semicircleFrontLineColor="@color/colorAccent"
            app:semicircleLineSize="8dp"
            app:semicircleSize="110dp"
            app:semicircleSubtitleColor="@android:color/white"
            app:semicircleSubtitleSize="12sp"
            app:semicircleSubtitleText="AQI"
            app:semicircleTitleColor="@color/colorAccent"
            app:semicircleTitleSize="14sp"
            app:semicircleTitleText="指数" />

        <TextView
            android:id="@+id/aqi_primary_pollute_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:textColor="@android:color/white"
            tools:text="@string/default_aqi_primary_pollute" />

        <TextView
            android:id="@+id/aqi_affect_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:textColor="@android:color/white"
            tools:text="@string/default_aqi_affect" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aqi_pm25_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="PM2.5:23" />

        <TextView
            android:id="@+id/aqi_pm10_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="PM10:30" />

        <TextView
            android:id="@+id/aqi_so2_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="SO2:30" />

        <TextView
            android:id="@+id/aqi_no2_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="NO2:30" />

        <TextView
            android:id="@+id/aqi_co_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="CO:30" />

        <TextView
            android:id="@+id/aqi_o3_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/text_view_padding"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="O3:30" />

    </LinearLayout>

</LinearLayout>
